--- a/client/project/src/app/component/investment/investment.component.css
+++ b/client/project/src/app/component/investment/investment.component.css
@@ -8,3 +8,7 @@
   /* backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px); */
 }
+label {
+  margin-bottom: 0.5rem;
+  color: var(--text-color);
+}
