--- a/client/project/src/app/component/savings/savings.component.html
+++ b/client/project/src/app/component/savings/savings.component.html
@@ -1,4 +1,9 @@
 <div class="container">
+  <p-breadcrumb
+    class="max-w-full m-2"
+    [model]="breadcrumbItems"
+    [home]="breadcrumbHome"
+  ></p-breadcrumb>
   <div class="row justify-content-center align-items-center g-2">
     <div class="col-10 text-center my-5 h1card">
       <h1>
