--- a/client/project/src/app/component/sell-stock/sell-stock.component.html
+++ b/client/project/src/app/component/sell-stock/sell-stock.component.html
@@ -1,12 +1,108 @@
 <div class="container">
   <div class="row justify-content-center align-items-center">
-    <div class="col-10 m-3 text-center">
+    <div class="col-12">
       <form [formGroup]="form" (submit)="sellStock()">
-        <div class="row justify-content-center align-items-center">
-          <div class="col-8 text-center">
-            <div class="ncard flex justify-content-center">
+        <div class="d-flex flex-column m-4">
+          <label htmlFor="symbol">Symbol</label>
+          <input
+            [style]="{ width: '100%' }"
+            type="text"
+            pInputText
+            [readOnly]="true"
+            formControlName="symbol"
+          />
+        </div>
+        <div class="d-flex flex-column m-4">
+          <label htmlFor="name">Name</label>
+          <input
+            [style]="{ width: '100%' }"
+            type="text"
+            pInputText
+            [readOnly]="true"
+            formControlName="name"
+          />
+        </div>
+        <div class="d-flex flex-column m-4">
+          <label htmlFor="price">Price</label>
+          <p-inputNumber
+            [style]="{ width: '100%' }"
+            formControlName="price"
+            [showButtons]="true"
+            buttonLayout="horizontal"
+            inputId="horizontal"
+            spinnerMode="horizontal"
+            [step]="10.0"
+            decrementButtonClass="p-button-danger"
+            incrementButtonClass="p-button-success"
+            incrementButtonIcon="pi pi-plus"
+            decrementButtonIcon="pi pi-minus"
+            mode="currency"
+            currency="USD"
+          ></p-inputNumber>
+        </div>
+        <div class="d-flex flex-column m-4">
+          <label htmlFor="quantity">Quantity</label>
+          <p-inputNumber
+            [style]="{ width: '100%' }"
+            formControlName="quantity"
+            mode="decimal"
+            [showButtons]="true"
+            inputId="minmax-buttons"
+            [min]="0.1"
+            [max]="10000"
+            [minFractionDigits]="0"
+            [maxFractionDigits]="2"
+          >
+          </p-inputNumber>
+          <span *ngIf="invalidFields('quantity')">
+            <code>The input cannot exceed holding quantity.</code>
+          </span>
+        </div>
+        <div class="d-flex flex-column m-4">
+          <label htmlFor="date">Date of Transaction</label>
+          <p-calendar
+            [style]="{ width: '100%' }"
+            formControlName="date"
+            [showIcon]="true"
+            [maxDate]="maxDate"
+            dateFormat="dd-mm-yy"
+          ></p-calendar>
+        </div>
+        <div class="d-flex flex-column m-4">
+          <label htmlFor="date">Fees</label>
+          <p-inputNumber
+            [style]="{ width: '100%' }"
+            formControlName="fees"
+            [showButtons]="true"
+            buttonLayout="horizontal"
+            inputId="horizontal"
+            spinnerMode="horizontal"
+            [step]="0.5"
+            decrementButtonClass="p-button-danger"
+            incrementButtonClass="p-button-success"
+            incrementButtonIcon="pi pi-plus"
+            decrementButtonIcon="pi pi-minus"
+            mode="currency"
+            currency="USD"
+          ></p-inputNumber>
+        </div>
+        <div class="d-flex flex-row-reverse m-4">
+          <button
+            pButton
+            pRipple
+            label="Confirm"
+            icon="pi pi-check"
+            class="p-button-text"
+            [disabled]="form.invalid"
+          ></button>
+        </div>
+
+        <!-- <div class="row justify-content-center align-items-center">
+          <div class="col-11 text-center">
+            <div class="ncard d-flex justify-content-center">
               <span class="p-float-label">
                 <input
+                  [style]="{ width: '100%' }"
                   type="text"
                   pInputText
                   [readOnly]="true"
@@ -16,13 +112,14 @@
               </span>
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div class="row justify-content-center align-items-center">
-          <div class="col-8 text-center">
-            <div class="ncard flex justify-content-center">
+        <!-- <div class="row justify-content-center align-items-center">
+          <div class="col-11 text-center">
+            <div class="ncard d-flex justify-content-center">
               <span class="p-float-label">
                 <input
+                  [style]="{ width: '100%' }"
                   type="text"
                   pInputText
                   [readOnly]="true"
@@ -32,13 +129,14 @@
               </span>
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div class="row justify-content-center align-items-center">
-          <div class="col-8 text-center">
-            <div class="ncard flex justify-content-center">
+        <!-- <div class="row justify-content-center align-items-center">
+          <div class="col-11 text-center">
+            <div class="ncard d-flex justify-content-center">
               <span class="p-float-label">
                 <p-inputNumber
+                  [style]="{ width: '100%' }"
                   formControlName="price"
                   [showButtons]="true"
                   buttonLayout="horizontal"
@@ -56,13 +154,14 @@
               </span>
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div class="row justify-content-center align-items-center">
-          <div class="col-8 text-center">
-            <div class="ncard flex justify-content-center">
+        <!-- <div class="row justify-content-center align-items-center">
+          <div class="col-11 text-center">
+            <div class="ncard d-flex justify-content-center">
               <span class="p-float-label">
                 <p-inputNumber
+                  [style]="{ width: '100%' }"
                   formControlName="quantity"
                   mode="decimal"
                   [showButtons]="true"
@@ -75,15 +174,19 @@
                 </p-inputNumber>
                 <label htmlFor="quantity">Quantity</label>
               </span>
+              <span *ngIf="invalidFields('quantity')">
+                <code>The input cannot exceed holding quantity.</code>
+              </span>
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div class="row justify-content-center align-items-center">
-          <div class="col-8 text-center">
-            <div class="ncard flex justify-content-center">
+        <!-- <div class="row justify-content-center align-items-center">
+          <div class="col-11 text-center">
+            <div class="ncard d-flex justify-content-center">
               <span class="p-float-label">
                 <p-calendar
+                  [style]="{ width: '100%' }"
                   formControlName="date"
                   [showIcon]="true"
                   [maxDate]="maxDate"
@@ -93,13 +196,14 @@
               </span>
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div class="row justify-content-center align-items-center">
-          <div class="col-8 text-center">
-            <div class="ncard flex justify-content-center">
+        <!-- <div class="row justify-content-center align-items-center">
+          <div class="col-11 text-center">
+            <div class="ncard d-flex justify-content-center">
               <span class="p-float-label">
                 <p-inputNumber
+                  [style]="{ width: '100%' }"
                   formControlName="fees"
                   [showButtons]="true"
                   buttonLayout="horizontal"
@@ -117,10 +221,10 @@
               </span>
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div class="row justify-content-center align-items-center my-3">
-          <div class="col-8 text-center">
+        <!-- <div class="row justify-content-center align-items-center my-3">
+          <div class="col-11 text-center">
             <button
               pButton
               pRipple
@@ -129,7 +233,7 @@
               [disabled]="form.invalid"
             ></button>
           </div>
-        </div>
+        </div> -->
       </form>
     </div>
   </div>
