--- a/client/project/src/styles.css
+++ b/client/project/src/styles.css
@@ -17,9 +17,17 @@ body {
   background-size: 400% 400%;
   animation: gradient 15s ease infinite; */
   height: 100vh;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+/*grow vertically*/
+/* .app-root {
+  flex: 1 1 auto; 
+} */
 
 .h1card {
   /* background: var(--surface-card); */
@@ -75,6 +83,16 @@ body {
 .p-tabview .p-tabview-panels {
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
+}
+
+.p-icon-wrapper {
+  display: inline !important;
+}
+
+.p-confirm-popup {
+  box-shadow: 0 1px 1px rgba(2, 0, 0, 0.2) !important;
+  /* box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2),
+    0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12); */
 }
 
 /* .p-datepicker table td {
