--- a/client/project/src/app/component/login/login.component.html
+++ b/client/project/src/app/component/login/login.component.html
@@ -89,7 +89,7 @@
     (click)="topFunction()"
     pButton
     pRipple
-    class="p-button-success"
+    class="p-button-info"
   >
     <fa-icon [icon]="pointUpIcon"></fa-icon>
   </button>
