--- a/client/project/src/app/component/login/login.component.html
+++ b/client/project/src/app/component/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <section class="login">
+  <!-- <section class="login">
     <div class="row justify-content-center m-3">
       <div class="col-4 text-center">
         <img [src]="imgSrc" [className]="imgClass" alt="" srcset="" />
@@ -23,11 +23,6 @@
                 (click)="resetLoginPage()"
               />
             </div>
-            <!-- <div class="p-inputgroup">
-            <span class="p-inputgroup-addon">
-              <i class="pi pi-user"></i>
-            </span>
-          </div> -->
             <p-password
               id="pwd"
               formControlName="password"
@@ -47,7 +42,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <section class="product-description">
     <div class="row justify-content-center align-items-center my-3">
       <div
