--- a/client/project/src/app/component/investment/investment.component.html
+++ b/client/project/src/app/component/investment/investment.component.html
@@ -24,6 +24,7 @@
         <div class="d-flex flex-column m-4">
           <label htmlFor="price">Price</label>
           <p-inputNumber
+            inputmode="numeric"
             [style]="{ width: '100%' }"
             formControlName="price"
             [showButtons]="true"
@@ -43,6 +44,7 @@
         <div class="d-flex flex-column m-4">
           <label htmlFor="quantity">Quantity</label>
           <p-inputNumber
+            inputmode="numeric"
             [style]="{ width: '100%' }"
             formControlName="quantity"
             mode="decimal"
@@ -73,6 +75,7 @@
         <div class="d-flex flex-column m-4">
           <label htmlFor="fees">Fees</label>
           <p-inputNumber
+            inputmode="numeric"
             [style]="{ width: '100%' }"
             formControlName="fees"
             [showButtons]="true"
