--- a/client/project/src/app/component/savings/savings.component.html
+++ b/client/project/src/app/component/savings/savings.component.html
@@ -30,6 +30,7 @@
               id="yearInput"
               class="ms-2 fs-4"
               type="number"
+              inputmode="numeric"
               formControlName="year"
               [style]="{ width: '30%' }"
             />
