--- a/client/project/src/app/app.component.html
+++ b/client/project/src/app/app.component.html
@@ -49,6 +49,7 @@
       icon="pi pi-user"
       label="Sign Up"
       styleClass=" p-button-text p-button-secondary"
+      (onClick)="showSignUpDialog()"
     ></p-button>
   </ng-template>
 </p-menubar>
