--- a/client/project/src/app/component/dashboard/dashboard.component.html
+++ b/client/project/src/app/component/dashboard/dashboard.component.html
@@ -2,6 +2,9 @@
   <div class="row justify-content-center align-items-center">
     <div class="col-10 text-center my-5 h1card">
       <h1>Welcome {{ username() | titlecase }}</h1>
+      <div *ngIf="quoteOfTheDay" class="mt-3">
+        <p class="mb-0 font-monospace">"{{ quoteOfTheDay }}"</p>
+      </div>
     </div>
     <div class="dashboardcard flex justify-content-center">
       <p-fieldset [toggleable]="true" class="text-center">
